# Projekt-Drahtlose-Sensornetzwerke

./: README.md  build.sh  docker-compose.yml  install_openforti.sh  install_openthread.sh  package-lock.json  pom.xml  raspberry_pi_install.sh
CoAPServer/: Dockerfile  pom.xml
CoAPServer/src/main/resources/: application-dev.yml  application-prod.yml  application-test.yml
DB/: docker-compose.yml  start.sh
backend/: Dockerfile  pom.xml
backend/src/main/resources/: application-dev.properties  application-prod.properties  application-test.properties  application.properties
frontend/: Dockerfile  README.md  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: index.html
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
frontend/src/app/dashboard/: dashboard-routing.module.ts  dashboard.module.ts
frontend/src/app/dashboard/common/: room.ts  sensor.ts
frontend/src/app/dashboard/service/: RoomService.ts  sensor-service.ts
frontend/src/app/shared/: shared.module.ts
frontend/src/environments/: environment.prod.ts  environment.ts
sensorConnect/: CMakeLists.txt  low_power.overlay  nrf52840dk_nrf52840.overlay  overlay-logging.conf  prj.conf  sample.yaml
sensorConnect/src/: main.c  scd4x_i2c.c  scd4x_i2c.h  sensirion_common.c  sensirion_common.h  sensirion_config.h  sensirion_i2c.c  sensirion_i2c.h  sensirion_i2c_hal.c  sensirion_i2c_hal.h  sensor_functionality.c  sensor_functionality.h  sgp41_i2c.c  sgp41_i2c.h  svm41_i2c.c  svm41_i2c.h
(+118 files in other folders)
